feat: configure micropub endpoint

--- a/src/includes/head.liquid
+++ b/src/includes/head.liquid
@@ -20,7 +20,7 @@
     {% comment %} Indieweb {% endcomment %}
     <link href="https://indieauth.com/auth" rel="authorization_endpoint"/>
     <link href="https://tokens.indieauth.com/token" rel="token_endpoint"/>
-    {% comment %} <link href="https://celestial-micropub.herokuapp.com/micropub" rel="micropub"/> {% endcomment %}
+    <link href="http://localhost:3000/micropub" rel="micropub"/>
 
 	{% comment %} Facebook Open Graph + Twitter {% endcomment %}
     <meta property="og:site_name" content="{{siteTitle}}" key="ogsitename"/>
