style: update owner/author details

--- a/src/content/special-pages/index.liquid
+++ b/src/content/special-pages/index.liquid
@@ -4,4 +4,4 @@ title: "Home"
 permalink: "/"
 ---
 
-{% render author-card, authors: site.authors, slug: 'jane-doe' %}
+{% render author-card, authors: site.authors, slug: 'anon-microblogger' %}
