wip: support for microposts

--- a/src/includes/header.liquid
+++ b/src/includes/header.liquid
@@ -1,5 +1,5 @@
 {% capture isHomePage %}{% if url == "/" %}true{% else %}false{% endif %}{% endcapture %}
-<header class="text-center {% if isHomePage == 'true' %}mb-20{% endif %}">
+<header class="text-center {% if isHomePage == 'true' %}mb-20{% endif %} mb-16">
     {% unless isHomePage == "true" %}
     <div class="my-2">
         <h1 class="text-xl lg:text-2xl mt-0 lg:mt-0">{{title}}</h1>
