feat: add support for like
* also refactors micro-post-card to function as a single render file for any micro post

--- a/src/content/special-pages/micro.liquid
+++ b/src/content/special-pages/micro.liquid
@@ -16,7 +16,11 @@ eleventyComputed:
 	{% include page-title title:title %}
 	<main>
         {% for micropost in microposts %}
-        {% include micro-post-card micro-post:micropost perma:false %}
+        {% include micro-post-card,
+          micro-post:micropost,
+          post-type:micropost.data.layout,
+          perma:false
+        %}
         {% endfor %}
 	</main>
 </section>
