--- a/src/layouts/note.liquid
+++ b/src/layouts/note.liquid
@@ -3,37 +3,9 @@ layout: default
 permalink: "/micro/notes/{{ page.date | date: '%Y/%m/%d' }}/{{ page.fileSlug | slice: 10, -1 }}/"
 ---
 
-<article class="h-entry">
-    <header>
-        <p class="text-sm my-0">
-            <a href="{{page.url}}" class="u-url u-uid"><time datetime="{{page.date | dateInISO8601}}" class="dt-published">{{ page.date | friendlyDate }}</time></a>
-            {% if updated %}
-                {% assign publishDate = page.date | friendlyDate %}
-                {% assign updateDate = updated | friendlyDate %}
-                {% unless publishDate == updateDate %}
-                    <span class="h5 text-xs lg:text-sm my-1 lg:mt-1 text-italic">(last updated on <time class="dt-updated" datetime="{{ updated | dateInISO8601 }}">{{ updated | friendlyDate }}</time>)</span>
-                {% endunless %}
-            {% endif %}
-        </p>
-        {%- if category.size > 0 -%}
-			<div class="post-tag mb-4 flex flex-row flex-wrap items-top lg:items-center">
-				<span class="text-gray-800 dm:text-gray-300 text-sm mr-1">Categorized under:</span>
-				{% for cat in category %}
-				{% assign cat_name = cat | slug %}
-					<span class="text-gray-600 dm:text-gray-400 text-sm hover:text-indiple-regular mr-1 p-category">#{{cat}}</span>
-				{% endfor %}
-			</div>
-		{%- endif -%}
-    </header>
-    <main class="e-content">
-        {{ content }}
-    </main>
-    <footer>
-        {% render author-card,
-            authors: site.authors,
-            slug: page.author,
-            hide: true,
-            post: true
-        %}
-    </footer>
-</article>
+{% include
+    micro-post-card,
+    micro-post:page,
+    post-type:'note',
+    perma:true
+%}
