--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -13,3 +13,11 @@
 @import "base";
 @import "typography";
 @import "syntax";
+
+img.emoji {
+  display: inline-block;
+  height: 1em;
+  width: 1em;
+  margin: 0 0.05em 0 0.1em;
+  vertical-align: -0.1em;
+}
