--- a/src/includes/head.liquid
+++ b/src/includes/head.liquid
@@ -53,4 +53,8 @@
     <meta name="twitter:creator" content="{{ twitterInfo.username }}" key="twhandle"/>
 
 	<link rel="stylesheet" href="/assets/css/style.css">
+
+    {% comment %} Twemoji {% endcomment %}
+    <script src="https://twemoji.maxcdn.com/v/13.0.1/twemoji.min.js" integrity="sha384-5f4X0lBluNY/Ib4VhGx0Pf6iDCF99VGXJIyYy7dDLY5QlEd7Ap0hICSSZA1XYbc4" crossorigin="anonymous"></script>
+
 </head>
