style: uniform spacing in default layout

--- a/src/layouts/default.liquid
+++ b/src/layouts/default.liquid
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" {% if page.url == '/articles/' %}class="h-feed"{% endif %}>
-{% render head,
+{% render
+	head,
 	siteTitle: site.title,
 	pageTitle:title,
 	content-description:content-description,
@@ -13,7 +14,8 @@
 
 	<div class="body-holder">
 	
-		{% render header,
+		{% render
+			header,
 			url:page.url, 
 			title:site.title,
 			subtitle:site.subtitle,
