--- a/src/layouts/note.liquid
+++ b/src/layouts/note.liquid
@@ -5,6 +5,7 @@ permalink: "/micro/notes/{{ page.date | date: '%Y/%m/%d' }}/{{ page.fileSlug | s
 
 {% include
     micro-post-card,
+    content: content,
     micro-post:page,
     post-type:'note',
     perma:true
