--- a/src/layouts/reply.liquid
+++ b/src/layouts/reply.liquid
@@ -5,6 +5,7 @@ permalink: "/micro/replies/{{ page.date | date: '%Y/%m/%d' }}/{{ page.fileSlug |
 
 {% include
     micro-post-card,
+    content: content,
     micro-post:page,
     post-type:'reply',
     perma:true
