fix: permalink in template file

--- a/src/layouts/templates/article.njk
+++ b/src/layouts/templates/article.njk
@@ -21,7 +21,7 @@ syndicate-to:
 {%- endfor %}
 {%- endif %}
 
-permalink: "/articles/{{ published | date('yyyy/MM') }}/{{name}}/"
+permalink: "/articles/{{ published | date('yyyy/MM') }}/{{ slug }}/"
 ---
 
 {{ content | safe }}
